--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Nike-Inspired Shoe Store</title>
+    <title>FootFetish</title>
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
 </head>
@@ -67,7 +67,7 @@
     </main>
     
     <footer>
-        <p>&copy; 2025 Shoe Store. Designed by 23-05253</p>
+        <p>&copy; 2025 FootFetish. Designed by 23-05253</p>
     </footer>
     
     <script src="script.js"></script>
